# asteroids-cpp

./: CMakeLists.txt  main.cpp
cmake/: FindPOCO.cmake  FindSDL2.cmake  settings.cmake
data/: Asteroid.frag  Asteroid.vert  Player.frag  Shot.frag  Shot.vert
src/: CMakeLists.txt  Game.cpp  Game.hpp  Player.hpp  logging.hpp  objects.hpp  rendering.hpp  util.cpp  util.hpp
src/asteroid/: Asteroid.hpp  AsteroidRenderer.cpp  AsteroidRenderer.hpp  CircularAsteroid.cpp  CircularAsteroid.hpp
src/objects/: Asteroid.cpp  Asteroid.hpp  GameTicker.cpp  GameTicker.hpp  LaserShot.cpp  LaserShot.hpp  ObjectScene.cpp  ObjectScene.hpp  Player.cpp  Player.hpp  collision.cpp  collision.hpp
src/player/: DrawablePlayer.cpp  DrawablePlayer.hpp  Player.hpp  PlayerRenderer.cpp  PlayerRenderer.hpp
src/rendering/: AsteroidRenderer.cpp  AsteroidRenderer.hpp  GLContextRenderer.cpp  GLContextRenderer.hpp  LaserShotRenderer.cpp  LaserShotRenderer.hpp  PlayerRenderer.cpp  PlayerRenderer.hpp  SDLWindow.cpp  Shader.cpp  Shader.hpp  SimpleTextOverlay.cpp  SimpleTextOverlay.hpp
src/shot/: LaserShot.cpp  LaserShot.hpp  LaserShotRenderer.cpp  LaserShotRenderer.hpp  Shot.hpp
test/: CMakeLists.txt  game_check.cpp  player_check.cpp
